[package]
name = "sonar-presence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cpal = "0.15"
crossbeam-channel = "0.5"
ctrlc = "3"
chrono = "0.4"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
realfft = "3"
rustfft = "6"

symphonia = { version = "0.5.4", features = [
    "mkv",
    "isomp4",
    "wav",
    "mp3",
    "aac",
    "vorbis",
    "flac",
] }
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
